[package]
name = "rns-crypto"
description = "Cryptographic primitives for Reticulum"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
